--- a/Estilo.css
+++ b/Estilo.css
@@ -69,7 +69,7 @@ body {
   margin-left: 144px;
   display: flex;
   flex-direction: column;
-  width: 580px;
+  width: 480px;
   height: 475px;
   background-color: none;
   border-radius: var(--espacio-mediano);
@@ -189,7 +189,7 @@ body {
   display: inline-block;
   font-family: var(--fuente-inter);
   font-size: var(--font-size-mediano);
-  margin: 4px 2px;
+  margin: 440px 0px 0px;
   cursor: pointer;
   border-color: var(--color-secundario);
   border-radius: 24px;
@@ -203,7 +203,6 @@ body {
 
 .right-section {
   margin-top: 10px;
-  margin-left: 0;
   background-color: var(--color-terceario);
   border-radius: var(--espacio-mediano);
   padding: 20px;
@@ -213,10 +212,8 @@ body {
 
 .seccion_output {
   margin-top: 1px;
-  margin-left: 500px;
   display: flex;
   flex-direction: column;
-  width: 400px;
   height: 944px;
   align-items: first baseline;
   background-color: var(--color-terceario);
@@ -231,7 +228,7 @@ body {
 }
 
 .output-image {
-  width: 336px;
+  width: 236px;
   height: 304px;
   margin-bottom: var(--espacio-grande);
 }
