Detalle de forma

--- a/Estilo.css
+++ b/Estilo.css
@@ -230,7 +230,7 @@ body {
   font-family: var(--fuente-inter);
   font-weight: bold;
   font-size: 24px;
-  margin-bottom: var(--espacio-mediano);*/
+  margin-bottom: var(--espacio-mediano);
 }
 
 .estilo_de_botón_copiador {
